# claude-repo-chat

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PROJECT.md  README.md
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py  terminal.py
